fix: align back to embark link

--- a/sass/themes/okc/overrides.scss
+++ b/sass/themes/okc/overrides.scss
@@ -212,8 +212,11 @@ section.content {
   text-decoration: none;
   cursor: pointer;
   margin-right: 60px;
+  display: flex;
+  align-items: center;
   .icon-container {
     margin-left: .5em;
+    padding-bottom: 4px;
   }
 }
 
